@@ -11,6 +11,7 @@ lintian-brush (0.14) UNRELEASED; urgency=medium
     settings.
   * Add a fixer for renamed-tag.
   * Fix my e-mail address in debian/copyright.
+  * Report fixer duration when --verbose is specified.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 16 Feb 2019 15:11:25 +0000
 
